Update README with comprehensive project documentation and setup guide
Co-authored-by: zhoujun9633 <zhoujun9633@gmail.com>